# ssd-data-model

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  README.md  app.py  convert.py  create_cms_extract_sql.py  create_cms_sql.py  create_erd_fieldlist.py  create_erd_from_yaml.py  create_erd_from_yml.py  create_erd_from_yml_2.py  create_erd_multiyaml.py  create_yml_files_from_spec.py  create_yml_root_test.py  erd_1.py  erd_2.py  erd_3.py  generate_html.py  index.html  main.py  migrate.py  modified_liquidlogic_sqlserver_perm_ssd.sql  pyproject.toml  rebaseline_repo.sh  requirements-dev.in  requirements.in  requirements.txt  requirements_BAK.txt  requirements_dev.txt  result_matrix.csv  setup.sh  setup_sparse_checkout.sh  sparse_branch_init.sh  sparse_checkout_init.sh  sparse_update_pull_updates.sh  ssd_upload.py  ssd_upload_json.py  ssd_upload_local.py  ssd_upload_yaml.py  (+1 more)
admin/: notes.txt
assets/: dot-template.txt  output.gv  template.docx
clean_up_tmp/: create_erd.py  create_erd2.py  schema_BAK.yaml
cms_extract_sql/: liquidlogic_sqlserver_AnnexA_tmp.sql
cms_ssd_extract_generated_sql__future_release/: 208_lambeth_mosaic_oracle.sql  340_knowsley_liquidlogic_sqlserver.sql
cms_ssd_extract_sql/: cms_ssd_clone_la_deployment_guidance.txt  cmsname_dbtype_ssd_template.sql
data/: datatypes.yml  datatypes__future_release.yml  process.py  specification.yaml  v0.xlsx  validators.yml  workflow.yml
deployment_extracts/: cmsname_dbtype_ssd_template_v1.2.2_1_20240926 copy.sql  cmsname_dbtype_ssd_template_v1.2.2_1_20240926.sql  cmsname_dbtype_ssd_template_v1.2.5_1_20241106.sql  ssd_README.md  ssd_version_history.yml
deployment_extracts__future_release/: 111_bradford_systemc_sql server.sql  332_eastsussex_systemc_sqlserver_v1.2.2_1.sql  344_knowsley_systemc_sqlserver_v1.2.2_1.sql  350_bradford_systemc_sqlserver_v1.2.2_1.sql  931_oxfordshire_systemc_sqlserver_v1.2.2_1.sql
deployment_extracts_la_release/: 332_eastsussex_systemc_sqlserver_v1.2.3_1.sql  332_eastsussex_systemc_sqlserver_v1.2.4_1.sql  340_knowsley_systemc_sqlserver_v1.2.3_1.sql  340_knowsley_systemc_sqlserver_v1.2.4_1.sql  350_bradford_systemc_sqlserver_v1.2.3_1.sql  350_bradford_systemc_sqlserver_v1.2.4_1.sql  (+8 more)
docs/: CNAME  README.html  (+7 more)
(+1369 files in other folders)
