[tool.poetry]
name = "ssd-data-model-3-9"
version = "0.1.0"
description = "Standard Safeguarding Dataset"
authors = ["Data to Insight"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "ssd_data_model_3" }]

[tool.poetry]
urls = { homepage = "https://github.com/data-to-insight/ssd-data-model", specification = "https://data-to-insight.github.io/ssd-data-model/" }


[tool.poetry.dependencies]
python = "^3.10"
graphviz = "^0.17.0"
pygraphviz = "^1.7"
PyYAML = "^6.0"
pandas = "^1.3.4"
GitPython = "^3.1.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[build-system.scripts]
micropip = "micropip:micropip"
