[tool.poetry]
name = "ssd-data-model-3-9"
version = "0.1.0"
description = "Standard Safeguarding Dataset"
authors = ["Data to Insight"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "ssd_data_model_3" }]
urls = { homepage = "https://github.com/data-to-insight/ssd-data-model", specification = "https://data-to-insight.github.io/ssd-data-model/" }


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
graphviz = "^0.17.0"
pygraphviz = "^1.11"
PyYAML = "^6.0"
pandas = "^2.2.3"
scipy = ">=1.11.2,<2.0"
scikit-learn = "^1.4.2"
GitPython = "^3.1.24"

[tool.poetry.scripts]
your-command = "your_package.module:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"